# elsabot_bt

./: .gitmodules  .project  CMakeLists.txt  README.md  bt_trace.fbl  input_text.sh  package.xml
bt_xml/: bt_antenna.xml  bt_ball_picker1.xml  bt_ball_picker2.xml  bt_bb_test.xml  bt_boris_laser_play_narration.xml  bt_cat_game.xml  bt_demo1.xml  bt_follow_line.xml  bt_game_back_yard.xml  bt_game_top (copy).xml  bt_game_top.xml  bt_games_v2.xml  bt_greeter.xml  bt_jeep_nav_narration.xml  bt_listen.xml  bt_nav_compute_path1.xml  bt_nav_follow_on_cmd.xml  bt_nav_follow_test.xml  bt_nav_loop.xml  bt_nav_loop_simple.xml  bt_nav_mememan.xml  bt_nav_mememan_interrupt.xml  bt_nav_mememan_snapshot.xml  bt_nav_move2.xml  bt_nav_move2_yaw.xml  bt_nav_move3_yaw.xml  bt_nav_test_cancel_nav.xml  bt_object_detect1.xml  bt_object_detect_cat.xml  bt_pose1.xml  bt_power_monitor_sub_tree.xml  bt_robot_find_test1.xml  bt_robot_find_test2.xml  bt_robot_find_test3.xml  bt_robot_seek_test1.xml  bt_robot_seek_test2.xml  bt_robot_seek_test3.xml  bt_robot_seek_test4.xml  bt_robot_seek_test5.xml  bt_robot_seek_test6.xml  (+46 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bt_ros2/lib/bt_ros2/: bt_ros2  send_goal
install/bt_ros2/share/ament_index/resource_index/package_run_dependencies/: bt_ros2
install/bt_ros2/share/ament_index/resource_index/parent_prefix_path/: bt_ros2
install/bt_ros2/share/bt_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/bt_ros2/share/bt_ros2/bt_xml/: bt_game_top.xml  bt_listen.xml  bt_nav_mememan.xml  bt_nav_mememan_interrupt.xml  bt_nav_mememan_snapshot.xml  bt_pose1.xml  bt_snapshot.xml  bt_speak.xml  bt_speak_listen.xml  bt_speak_listen2.xml  bt_speak_listen_ck.xml
install/bt_ros2/share/bt_ros2/cmake/: bt_ros2Config-version.cmake  bt_ros2Config.cmake
install/bt_ros2/share/bt_ros2/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh
install/bt_ros2/share/bt_ros2/launch/: bt_ros2.launch.py
launch/: bt_ros2.launch.py  elsabot_bt.launch.py  elsabot_bt_only.launch.py
log/: latest_build
src/: ai_action.cpp  ai_action.hpp  ai_chat_action.hpp  ai_model_request.hpp  ai_session.cpp  ai_session.hpp  antenna_action.hpp  arm_goto_named_position_action.hpp  async_http_request.cpp  async_http_request.hpp  base64.cpp  base64.hpp  bt_custom_type_helpers.hpp  bt_ros2.cpp  cancel_audio_action.cpp  cancel_audio_action.hpp  copy_bb_value_into_json_key_action.cpp  copy_bb_value_into_json_key_action.hpp  copy_json_key_value_into_bb_action.cpp  copy_json_key_value_into_bb_action.hpp  detection_command_action.hpp  detection_configure_action.hpp  detection_get_objects_action.cpp  detection_get_objects_action.hpp  detection_get_position_action.hpp  detection_processor.cpp  detection_processor.hpp  detection_processor_container.cpp  detection_processor_container.hpp  detection_processor_create_action.hpp  detection_select_action.hpp  detection_wait_for_object_detected_action.cpp  detection_wait_for_object_detected_action.hpp  game_settings.cpp  game_settings.hpp  get_camera_frame_action.hpp  get_movement_status_action.hpp  get_power_status_action.hpp  get_random_selection.hpp  get_robot_pose_action.hpp  (+107 more)
src/game_support/: game_settings.hpp  robot_cat_game.cpp  robot_cat_game_init_action.hpp  robot_find_check_step.hpp  robot_find_game.cpp  robot_find_init_action.hpp  robot_find_next_step.hpp  robot_find_set_position.hpp  robot_says_game.hpp  robot_says_init_actions.hpp  robot_says_next_pass.hpp  robot_seek_game.cpp  robot_seek_game.hpp  robot_seek_next_pose.hpp
src/refactor/: ll_coord_to_local_utm.hpp  nav2_client_loop.hpp  nav2_compute_path_client_util.hpp  nav2_follow_waypoints.hpp  nav2_nav_through_poses.hpp  text_to_speech_action_client.hpp
test_logs/: log_video_050826.txt
