<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elsabot_bt</name>
  <version>0.0.1</version>
  <description>Elsabot behavior engine and trees</description>
  <maintainer email="horton.rscott@gmail.com">Scott Horton</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>speech_action_interfaces</depend>
  <depend>robot_head_interfaces</depend>
  <depend>robot_ui_interfaces</depend>
  <depend>object_detection_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
